--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^7.0.3",
+    "postcss": "^8.5.4"
   }
 }
