--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,5 +1,6 @@
 PORT = 4000
-MONGO_URL = mongodb://127.0.0.1:27017
+mongodb+srv://aayushkunwar03:Aayush%23%40123@mernproject.yunrtav.mongodb.net/<database_name>?retryWrites=true&w=majority&appName=MERNproject
+
 
 
 PORTFOLIO_URL=http://localhost:5174
