--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -3,8 +3,8 @@ mongodb+srv://aayushkunwar03:Aayush%23%40123@mernproject.yunrtav.mongodb.net/<da
 
 
 
-PORTFOLIO_URL=http://localhost:5174
-DASHBOARD_URL=http://localhost:5173
+PORTFOLIO_URL=https://aayushkunwar.netlify.app
+DASHBOARD_URL=https://portfoliobord.netlify.app
 
 
 
